# spell_checker

./: CMakeLists.txt  main_mt.cpp  main_st.cpp  utils.h
project/: spell_checker.cpp
